history done without references, folders made, all profile and synagogues pages made

--- a/rabbis.html
+++ b/rabbis.html
@@ -30,7 +30,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="history.html">History</a></li>
-                        <li><a href="kehilles.html">Kehilles</a></li>
+
                         <li><a href="rabbis.html" class="active">Rabbis</a></li>
                         <li><a href="synagogues.html">Synagogues</a></li>
                         <li><a href="contribute.html">Contribute</a></li>
@@ -55,7 +55,8 @@
 
                     <!-- A -->
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/rav-moshe-avigdor-amiel.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/rav-moshe-avigdor-amiel.jpg" alt="Rav Moshe Avigdor Amiel">
                             </div>
@@ -69,7 +70,8 @@
 
                     <!-- B -->
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/shemuel-brodt.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="https://placehold.co/400x400/2d2d2d/c5a059?text=Shemu’el+Brodt"
                                     alt="Shemu’el Brodt">
@@ -84,7 +86,7 @@
 
                     <!-- K -->
                     <article class="card">
-                        <a href="rabbi-chaim-kreiswirth.html"
+                        <a href="rabbis/rabbi-chaim-kreiswirth.html"
                             style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/rabbi-chaim-kreiswirth.jpg" alt="Rabbi Chaim Kreiswirth">
@@ -99,7 +101,8 @@
 
                     <!-- L -->
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/reb-leibish.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/reb-leibish.png" alt="Reb Leibish">
                             </div>
@@ -112,7 +115,8 @@
                     </article>
 
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/rav-dovid-moshe-lieberman.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/rav-lieberman.jpg" alt="Rav Dovid Moshe Lieberman">
                             </div>
@@ -126,7 +130,8 @@
 
                     <!-- M -->
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/rav-hillel-medalie.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/rav-hillel-medalie.jpg" alt="Rav Hillel Medalie">
                             </div>
@@ -140,7 +145,8 @@
 
                     <!-- P -->
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/rav-pinchas-padwa.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/rav-pinchas-padwa.jpg" alt="Rav Pinchas Padwa">
                             </div>
@@ -152,9 +158,27 @@
                         </a>
                     </article>
 
+                    <!-- R -->
+                    <article class="card">
+                        <a href="rabbis/rav-markus-mordechai-rottenberg.html"
+                            style="display: block; text-decoration: none; color: inherit;">
+
+                            <div class="card-image" style="height: 200px;">
+                                <img src="images/rav-markus-mordechai-rottenberg.jpg"
+                                    alt="Rav Markus Mordechai Rottenberg">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title" style="font-size: 1.2rem;">Rav Markus Mordechai Rottenberg</h3>
+                                <div class="card-meta">1872 - 1944</div>
+                                <span class="card-link">View Profile &rarr;</span>
+                            </div>
+                        </a>
+                    </article>
+
                     <!-- S -->
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/rav-aaron-schiff.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/rav-aaron-schiff.jpg" alt="Rav Aaron Schiff">
                             </div>
@@ -167,7 +191,8 @@
                     </article>
 
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbis/dayan-schmal.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/dayan-schmal.jpg" alt="Dayan Schmal">
                             </div>
