--- a/rabbis/shemuel-brodt.html
+++ b/rabbis/shemuel-brodt.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rabbi Chaim Kreiswirth - Jewish Antwerp Historical Archive</title>
+    <title>Shemu’el Brodt - Jewish Antwerp Historical Archive</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/accordion.css">
-    <script src="js/nav.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/accordion.css">
+    <script src="../js/nav.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="logo">
-                    <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
+                    <a href="../index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
                 </div>
                 <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="bar"></span>
@@ -28,12 +28,11 @@
                 </button>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="history.html">History</a></li>
-                        <li><a href="kehilles.html">Kehilles</a></li>
-                        <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html">Synagogues</a></li>
-                        <li><a href="contribute.html">Contribute</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../history.html">History</a></li>
+                        <li><a href="../rabbis.html">Rabbis</a></li>
+                        <li><a href="../synagogues.html">Synagogues</a></li>
+                        <li><a href="../contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,32 +41,25 @@
         <main id="main-content">
             <!-- Breadcrumb / Header Area -->
             <div class="container" style="padding-top: var(--spacing-md); padding-bottom: var(--spacing-sm);">
-                <h1 style="font-size: 3rem; color: var(--color-gold); margin-bottom: 0.5rem;">Rabbi Chaim Kreiswirth
-                </h1>
-                <p class="hebrew-text" style="font-size: 1.5rem; color: var(--color-text-muted);">הרב חיים קרייזווירט
-                </p>
+                <h1 style="font-size: 3rem; color: var(--color-gold); margin-bottom: 0.5rem;">Shemu’el Brodt</h1>
+                <p class="hebrew-text" style="font-size: 1.5rem; color: var(--color-text-muted);">שמואל ברודט</p>
             </div>
 
             <div class="container wiki-container" style="margin-top: 0;">
                 <!-- Main Content -->
                 <article class="wiki-main">
                     <section class="wiki-content">
-                        <p><strong>Introduction:</strong> Rabbi Chaim Kreiswirth (1918–2001) was a renowned Talmudic
-                            scholar and the long-serving Chief Rabbi of the <a href="synagogues.html"
-                                class="wiki-link">Machsike Hadass</a> community in Antwerp. Known
-                            for his phenomenal memory and deep compassion, he rebuilt the community after the war.</p>
+                        <p><strong>Introduction:</strong> Shemu’el Brodt (1885–1963) was a significant figure in the
+                            Antwerp Jewish community. Known for his dedicated service and rabbinical knowledge, he
+                            played a key role in the religious life of the city.</p>
 
                         <h2>Life & Career</h2>
-                        <p>Born in Wojnicz, Galicia, he was known as the "Cracower Illui" (Prodigy of Cracow). He
-                            studied in Polish yeshivas before fleeing to Lithuania and then to Israel via Japan and
-                            Shanghai during WWII. He later moved to the United States before accepting the position of
-                            Chief Rabbi of Antwerp in 1953, a position he held for nearly 50 years.</p>
+                        <p>Detailed biographical information is currently being researched. He served the community with
+                            distinction during his lifetime, spanning the pre-war and post-war eras.</p>
 
                         <h2>Legacy</h2>
-                        <p>Rabbi Kreiswirth was instrumental in re-establishing Jewish life in Antwerp. He founded
-                            Talmud Torahs, Yeshivas, and was deeply involved in charitable works suitable for the
-                            "Father of Orphans." His mastery of the entire Talmud was legendary, often tested publicly.
-                        </p>
+                        <p>Shemu’el Brodt is remembered for his contributions to the rebuilding of Jewish life in
+                            Antwerp after World War II.</p>
                     </section>
 
                     <!-- Gallery Section -->
@@ -78,7 +70,8 @@
                             <!-- Gallery Item 1 -->
                             <div class="card">
                                 <div class="card-image" style="height: 200px;">
-                                    <img src="images/rabbi-chaim-kreiswirth.jpg" alt="Rabbi Chaim Kreiswirth Portrait">
+                                    <img src="https://placehold.co/400x400/2d2d2d/c5a059?text=Shemu’el+Brodt"
+                                        alt="Shemu’el Brodt">
                                 </div>
                             </div>
                         </div>
@@ -90,7 +83,7 @@
                     <!-- Profile Image in Sidebar -->
                     <div class="profile-image-container"
                         style="margin-bottom: var(--spacing-md); border-bottom: 1px solid var(--color-slate); padding-bottom: var(--spacing-md);">
-                        <img src="images/rabbi-chaim-kreiswirth.jpg" alt="Rabbi Chaim Kreiswirth"
+                        <img src="https://placehold.co/600x800/2d2d2d/c5a059?text=Shemu’el+Brodt" alt="Shemu’el Brodt"
                             style="width: 100%; height: auto; border-radius: 4px; border: 1px solid var(--color-slate); box-shadow: 0 4px 6px rgba(0,0,0,0.3);">
                     </div>
 
@@ -98,22 +91,17 @@
 
                     <div class="data-point">
                         <span class="data-label">Born</span>
-                        <span class="data-value">1918, Wojnicz</span>
+                        <span class="data-value">1885</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Died</span>
-                        <span class="data-value">2001, Antwerp</span>
-                    </div>
-
-                    <div class="data-point">
-                        <span class="data-label">Tenure</span>
-                        <span class="data-value">1953–2001</span>
+                        <span class="data-value">1963</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Role</span>
-                        <span class="data-value">Chief Rabbi, Machsike Hadass</span>
+                        <span class="data-value">Rabbinical Figure</span>
                     </div>
 
                 </aside>
@@ -126,9 +114,9 @@
             </div>
         </footer>
     </div>
-    <script src="js/lightbox.js"></script>
-    <script src="js/scroll-top.js"></script>
-    <script src="js/accordion.js"></script>
+    <script src="../js/lightbox.js"></script>
+    <script src="../js/scroll-top.js"></script>
+    <script src="../js/accordion.js"></script>
 </body>
 
 </html>
