--- a/synagogues/hollandse-synagoge.html
+++ b/synagogues/hollandse-synagoge.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hollandse Synagoge - Jewish Antwerp Historical Archive</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/accordion.css">
-    <script src="js/nav.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/accordion.css">
+    <script src="../js/nav.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="logo">
-                    <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
+                    <a href="../index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
                 </div>
                 <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="bar"></span>
@@ -28,12 +28,11 @@
                 </button>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="history.html">History</a></li>
-                        <li><a href="kehilles.html">Kehilles</a></li>
-                        <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html" class="active">Synagogues</a></li>
-                        <li><a href="contribute.html">Contribute</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../history.html">History</a></li>
+                        <li><a href="../rabbis.html">Rabbis</a></li>
+                        <li><a href="../synagogues.html">Synagogues</a></li>
+                        <li><a href="../contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,7 +41,7 @@
         <main id="main-content">
             <!-- Detail Hero -->
             <div class="hero"
-                style="height: 60vh; min-height: 500px; background-image: url('images/hollandse-synagogue.jpg'); background-position: center;">
+                style="height: 50vh; min-height: 400px; background-image: url('../images/hollandse-synagogue.jpg');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <h1>Hollandse Synagoge</h1>
@@ -54,31 +53,29 @@
                 <!-- Main Content -->
                 <article class="wiki-main">
                     <section class="wiki-content">
-                        <p class="intro-text">The Hollandse Synagoge (Dutch Synagogue), officially known as the
-                            Synagogue Shomre Hadass, is one of the most significant and architecturally stunning
-                            religious landmarks in Antwerp.</p>
+                        <p>The Hollandse Synagoge (Dutch Synagogue) is one of the most significant and architecturally
+                            stunning synagogues in Antwerp. Built in the Moorish Revival style, it stands as a testament
+                            to the community's rich history.</p>
 
-                        <h2>Architectural grandeur</h2>
-                        <p>Built in 1893 by the architect Joseph Hertogs, the synagogue is a masterpiece of the Moorish
-                            Revival style. Its facade is imposing yet inviting, featuring intricate stone detailing and
-                            a grand central arch.</p>
+                        <h2>Architecture</h2>
+                        <p>The synagogue was designed by architects Joseph Hertogs and Ernest Stordiau. Its facade is
+                            characterized by oriental influences, typical of synagogues built in this era.</p>
 
-                        <h2>Historical Significance</h2>
-                        <p>For over a century, this synagogue has served as a central house of worship for the Shomre
-                            Hadass community. It has witnessed the fluctuating history of Antwerp's Jews, from the
-                            golden age of the late 19th century through the devastation of WWII and the subsequent
-                            rebuilding of the community.</p>
+                        <h2>History</h2>
+                        <p>Inaugurated in 1893, it has served as a central place of worship for the Shomre Hadas
+                            community. It survived World War II significantly damaged but was later restored.</p>
                     </section>
 
                     <!-- Gallery Section -->
                     <section style="margin-top: 4rem;">
-                        <h2 style="font-size: 2rem; color: var(--color-gold); margin-bottom: 1rem;">Archive Gallery</h2>
+                        <h2 style="font-size: 2rem; color: var(--color-gold); margin-bottom: 1rem;">Community Archive
+                        </h2>
                         <div class="synagogue-grid"
                             style="grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));">
                             <!-- Gallery Item 1 -->
                             <div class="card">
                                 <div class="card-image" style="height: 200px;">
-                                    <img src="images/hollandse-synagogue.jpg" alt="Interior View">
+                                    <img src="../images/hollandse-synagogue.jpg" alt="Hollandse Synagoge Exterior">
                                 </div>
                             </div>
                         </div>
@@ -100,13 +97,8 @@
                     </div>
 
                     <div class="data-point">
-                        <span class="data-label">Architect</span>
-                        <span class="data-value">Joseph Hertogs</span>
-                    </div>
-
-                    <div class="data-point">
                         <span class="data-label">Kehille</span>
-                        <span class="data-value">Shomre Hadass</span>
+                        <span class="data-value">Shomre Hadas</span>
                     </div>
 
                 </aside>
@@ -119,9 +111,9 @@
             </div>
         </footer>
     </div>
-    <script src="js/lightbox.js"></script>
-    <script src="js/scroll-top.js"></script>
-    <script src="js/accordion.js"></script>
+    <script src="../js/lightbox.js"></script>
+    <script src="../js/scroll-top.js"></script>
+    <script src="../js/accordion.js"></script>
 </body>
 
 </html>
