--- a/synagogues/oosten-synagogue.html
+++ b/synagogues/oosten-synagogue.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Title - Jewish Antwerp Historical Archive</title>
+    <title>Oosten Synagogue - Jewish Antwerp Historical Archive</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/accordion.css">
-    <script src="js/nav.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/accordion.css">
+    <script src="../js/nav.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="logo">
-                    <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
+                    <a href="../index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
                 </div>
                 <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="bar"></span>
@@ -28,12 +28,11 @@
                 </button>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="history.html">History</a></li>
-
-                        <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html">Synagogues</a></li>
-                        <li><a href="contribute.html">Contribute</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../history.html">History</a></li>
+                        <li><a href="../rabbis.html">Rabbis</a></li>
+                        <li><a href="../synagogues.html">Synagogues</a></li>
+                        <li><a href="../contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,11 +41,11 @@
         <main id="main-content">
             <!-- Detail Hero -->
             <div class="hero"
-                style="height: 50vh; min-height: 400px; background-image: url('https://placehold.co/1920x600/1a1a1a/333333?text=Cover+Image');">
+                style="height: 50vh; min-height: 400px; background-image: url('../images/oosten-synagogue.jpg');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
-                    <h1>Page Title</h1>
-                    <p class="hebrew-text">כותרת בעברית</p>
+                    <h1>Oosten Synagogue</h1>
+                    <p class="hebrew-text">בית הכנסת אוסטן</p>
                 </div>
             </div>
 
@@ -54,11 +53,12 @@
                 <!-- Main Content -->
                 <article class="wiki-main">
                     <section class="wiki-content">
-                        <p>Introduction text goes here. This is the main content area where you can write the biography
-                            or history description.</p>
+                        <p>The Oosten Synagogue is a majestic building reflecting the grandeur of Antwerp's Jewish
+                            community in the early 20th century.</p>
 
-                        <h2>Biography / Architectecture</h2>
-                        <p>More detailed text about the subject.</p>
+                        <h2>Architecture</h2>
+                        <p>Known for its striking Art Nouveau features mixed with other architectural styles, it stands
+                            as a prominent landmark in the Jewish quarter.</p>
                     </section>
 
                     <!-- Gallery Section -->
@@ -70,13 +70,7 @@
                             <!-- Gallery Item 1 -->
                             <div class="card">
                                 <div class="card-image" style="height: 200px;">
-                                    <img src="https://placehold.co/400x400/333/c5a059?text=Photo+1" alt="Gallery Photo">
-                                </div>
-                            </div>
-                            <!-- Gallery Item 2 -->
-                            <div class="card">
-                                <div class="card-image" style="height: 200px;">
-                                    <img src="https://placehold.co/400x400/333/c5a059?text=Photo+2" alt="Gallery Photo">
+                                    <img src="../images/oosten-synagogue.jpg" alt="Oosten Synagogue">
                                 </div>
                             </div>
                         </div>
@@ -88,23 +82,13 @@
                     <h3 class="sidebar-title">At a Glance</h3>
 
                     <div class="data-point">
-                        <span class="data-label">Born / Built</span>
-                        <span class="data-value">Date</span>
+                        <span class="data-label">Built</span>
+                        <span class="data-value">Early 20th C.</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Location</span>
-                        <span class="data-value">Antwerp, Belgium</span>
-                    </div>
-
-                    <div class="data-point">
-                        <span class="data-label">Kehille</span>
-                        <span class="data-value">Community Name</span>
-                    </div>
-
-                    <div class="data-point">
-                        <span class="data-label">Chazan</span>
-                        <span class="data-value">Name</span>
+                        <span class="data-value">Oostenstraat</span>
                     </div>
 
                 </aside>
@@ -117,9 +101,9 @@
             </div>
         </footer>
     </div>
-    <script src="js/lightbox.js"></script>
-    <script src="js/scroll-top.js"></script>
-    <script src="js/accordion.js"></script>
+    <script src="../js/lightbox.js"></script>
+    <script src="../js/scroll-top.js"></script>
+    <script src="../js/accordion.js"></script>
 </body>
 
 </html>
