--- a/synagogues/portuguese-synagogue.html
+++ b/synagogues/portuguese-synagogue.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portuguese Synagogue - Jewish Antwerp Historical Archive</title>
     <!-- Google Fonts -->
@@ -12,9 +12,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/accordion.css">
-    <script src="js/nav.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/accordion.css">
+    <script src="../js/nav.js" defer></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="logo">
-                    <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
+                    <a href="../index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
                 </div>
                 <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="bar"></span>
@@ -31,12 +31,12 @@
                 </button>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="history.html">History</a></li>
-                        <li><a href="kehilles.html">Kehilles</a></li>
-                        <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html" class="active">Synagogues</a></li>
-                        <li><a href="contribute.html">Contribute</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../history.html">History</a></li>
+
+                        <li><a href="../rabbis.html">Rabbis</a></li>
+                        <li><a href="../synagogues.html" class="active">Synagogues</a></li>
+                        <li><a href="../contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -45,7 +45,7 @@
         <main id="main-content">
             <!-- Detail Hero -->
             <div class="hero"
-                style="height: 60vh; min-height: 500px; background-image: url('images/portuguese-synagogue.jpg'); background-position: center;">
+                style="height: 50vh; min-height: 400px; background-image: url('../images/portuguese-synagogue.jpg'); background-position: center;">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <h1>Portuguese Synagogue</h1>
@@ -92,7 +92,7 @@
 
                         <h2>1981 Synagogue Bombing</h2>
                         <div class="wiki-image-container image-float-right">
-                            <img src="images/1981-bombing.jpeg" class="lightbox-trigger"
+                            <img src="../images/1981-bombing.jpeg" class="lightbox-trigger"
                                 data-caption="Aftermath of the 1981 bombing on Hoveniersstraat"
                                 alt="Aftermath of the 1981 bombing"
                                 style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
@@ -167,9 +167,9 @@
             </div>
         </footer>
     </div>
-    <script src="js/lightbox.js"></script>
-    <script src="js/scroll-top.js"></script>
-    <script src="js/accordion.js"></script>
+    <script src="../js/lightbox.js"></script>
+    <script src="../js/scroll-top.js"></script>
+    <script src="../js/accordion.js"></script>
 </body>
 
 </html>
