--- a/synagogues/van-den-nestlei-synagogue.html
+++ b/synagogues/van-den-nestlei-synagogue.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Van Den Nestlei Synagogue - Jewish Antwerp Historical Archive</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/accordion.css">
-    <script src="js/nav.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/accordion.css">
+    <script src="../js/nav.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="logo">
-                    <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
+                    <a href="../index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
                 </div>
                 <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="bar"></span>
@@ -28,12 +28,12 @@
                 </button>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="history.html">History</a></li>
-                        <li><a href="kehilles.html">Kehilles</a></li>
-                        <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html">Synagogues</a></li>
-                        <li><a href="contribute.html">Contribute</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../history.html">History</a></li>
+
+                        <li><a href="../rabbis.html">Rabbis</a></li>
+                        <li><a href="../synagogues.html">Synagogues</a></li>
+                        <li><a href="../contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,7 +42,7 @@
         <main id="main-content">
             <!-- Detail Hero -->
             <div class="hero"
-                style="height: 50vh; min-height: 400px; background-image: url('images/van-den-nestlei-synagogue.jpg');">
+                style="height: 50vh; min-height: 400px; background-image: url('../images/van-den-nestlei-synagogue.jpg');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <h1>Van Den Nestlei Synagogue</h1>
@@ -74,7 +74,7 @@
                         </p>
 
                         <figure style="margin: 1.5rem 0;">
-                            <img src="images/van-den-nestlei-pogrom-1941.jpg"
+                            <img src="../images/van-den-nestlei-pogrom-1941.jpg"
                                 alt="Van den Nestlei Synagogue burning in 1941" class="lightbox-trigger"
                                 style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);"
                                 data-caption="A crowd of people watch as the synagogue from Van den Nest Street burns during the Antwerp pogrom on April 14, 1941. Firefighters and fire trucks are present in front of the building but don’t intervene. Source: Jewish Museum of Deportation and Resistance, Malines, Belgium — Fonds Van Oeteren">
@@ -103,13 +103,13 @@
                             <!-- Gallery Item 1 -->
                             <div class="card">
                                 <div class="card-image" style="height: 200px;">
-                                    <img src="images/van-den-nestlei-synagogue.jpg" alt="Synagogue Exterior">
+                                    <img src="../images/van-den-nestlei-synagogue.jpg" alt="Synagogue Exterior">
                                 </div>
                             </div>
                             <!-- Gallery Item 2 -->
                             <div class="card">
                                 <div class="card-image" style="height: 200px;">
-                                    <img src="images/van-den-nestlei-pogrom-1941.jpg"
+                                    <img src="../images/van-den-nestlei-pogrom-1941.jpg"
                                         alt="Van den Nestlei Synagogue burning in 1941"
                                         data-caption="A crowd of people watch as the synagogue from Van den Nest Street burns during the Antwerp pogrom on April 14, 1941. Firefighters and fire trucks are present in front of the building but don’t intervene. Source: Jewish Museum of Deportation and Resistance, Malines, Belgium — Fonds Van Oeteren">
                                 </div>
@@ -152,8 +152,8 @@
             </div>
         </footer>
     </div>
-    <script src="js/lightbox.js"></script>
-    <script src="js/scroll-top.js"></script>
+    <script src="../js/lightbox.js"></script>
+    <script src="../js/scroll-top.js"></script>
 </body>
 
 </html>
