--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="history.html" class="active">History</a></li>
-                        <li><a href="kehilles.html">Kehilles</a></li>
+
                         <li><a href="rabbis.html">Rabbis</a></li>
                         <li><a href="synagogues.html">Synagogues</a></li>
                         <li><a href="contribute.html">Contribute</a></li>
@@ -77,7 +77,8 @@
                         </p>
 
                         <p>
-                            In 1022, <a href="#"></a>Baldwin IV, Count of Flanders</a>, invited <a href="#">Jacob bar Jequthiel</a> and thirty other Jews
+                            In 1022, <a href="#"></a>Baldwin IV, Count of Flanders</a>, invited <a href="#">Jacob bar
+                                Jequthiel</a> and thirty other Jews
                             from Rouen to settle in Arras. This invitation was motivated primarily by economic
                             considerations, as Jewish merchants and financiers were seen as contributors to regional
                             development. Although Arras is today located in northern France, it was at the time part
@@ -100,8 +101,10 @@
                         <p>
                             By the 13th century, Jewish communities were established in Brabant, including Antwerp
                             and Brussels, as well as in other urban centers of the region. The first official document
-                            referring specifically to a Jewish community in Antwerp appears in the will of <a href="#">Henry III,
-                            Duke of Brabant</a>. In 1261, he expressed his wish that the Jews of Brabant be expelled,
+                            referring specifically to a Jewish community in Antwerp appears in the will of <a
+                                href="#">Henry III,
+                                Duke of Brabant</a>. In 1261, he expressed his wish that the Jews of Brabant be
+                            expelled,
                             citing their perceived role as usurers. Although this expulsion was never carried out,
                             Jewish residents were subjected to increased taxation and legal restrictions.
                         </p>
@@ -113,7 +116,8 @@
                         </p>
 
                         <p>
-                            During the mid-14th century, amid the outbreak of the <a href="#">Bubonic Plague</a> (1348–1349),
+                            During the mid-14th century, amid the outbreak of the <a href="#">Bubonic Plague</a>
+                            (1348–1349),
                             Jews in Antwerp and other major cities were accused of poisoning wells.
                             These accusations led to severe persecution, with many Jews being hanged,
                             burned at the stake, beaten to death, or drowned. Similar violence occurred across
@@ -204,14 +208,16 @@
                             <div class="caption-text">Belgian Revolution (1830)</div>
                         </div>
                         <p>
-                            Following the <a href="#">Belgian Revolution</a> of 1830, Belgium gained independence and became the Kingdom
+                            Following the <a href="#">Belgian Revolution</a> of 1830, Belgium gained independence and
+                            became the Kingdom
                             of Belgium. The Belgian Constitution proclaimed the separation of church and state and
                             guaranteed freedom of religion.
                         </p>
 
                         <p>
                             In 1831, one year after independence, Judaism was officially recognized as a religion, with
-                            the <a href="#"><em>Consistoire Central Israélite de Belgique</em></a> designated as its official
+                            the <a href="#"><em>Consistoire Central Israélite de Belgique</em></a> designated as its
+                            official
                             representative body. Jewish religious practice was guaranteed, and Jewish education was
                             legally organized by national authorities, notably under the supervision of the Ministry of
                             Justice.
@@ -313,7 +319,8 @@
                             Religious and communal life flourished during the interwar period. Numerous synagogues,
                             prayer houses, and study circles operated throughout the city, reflecting a wide range of
                             religious observance from Orthodox to more liberal traditions. Major synagogues such as the
-                            Hollands Synagoge and the <a href="#">Romi Goldmuntz Synagogue</a> became central institutions of Jewish
+                            Hollands Synagoge and the <a href="#">Romi Goldmuntz Synagogue</a> became central
+                            institutions of Jewish
                             life. Jewish schools provided both religious and general education, <a href="#"><em>Jesode
                                     Hatorah</em></a> (founded 1895), and <a href="#"><em>Tachkemoni</em></a> (founded
                             1920), and the yeshiva
@@ -330,8 +337,10 @@
                         </div>
 
                         <p>
-                            During the same period, a significant Jewish community also developed in the nearby <a href="#">district
-                            of Heide</a> (part of Kalmthout). Starting in the 1920s, Jews from Antwerp were drawn to Heide
+                            During the same period, a significant Jewish community also developed in the nearby <a
+                                href="#">district
+                                of Heide</a> (part of Kalmthout). Starting in the 1920s, Jews from Antwerp were drawn to
+                            Heide
                             both as holiday visitors and as permanent residents, contributing to the rapid growth and
                             prosperity of the area. Between 1930 and 1942, there were at least 700 registered Jewish
                             residents in Heide, and many more visited during weekends and summer months. The community
@@ -392,7 +401,8 @@
                                 Antwerp Pogrom</a>. The violence followed the screening of the antisemitic Nazi
                             propaganda film
                             <em>Der Ewige Jude</em> (“The Eternal Jew”). After the film, members of collaborationist and
-                            far-right groups, including activists associated with the <a href="#">VNV (Flemish National Union)</a>,
+                            far-right groups, including activists associated with the <a href="#">VNV (Flemish National
+                                Union)</a>,
                             marched into Jewish neighborhoods and carried out coordinated attacks.
                         </p>
 
@@ -574,6 +584,12 @@
 
                         <h3>Demographics</h3>
 
+                        <div class="wiki-image-container image-float-right">
+                            <img src="images/modern-day-community.jpg" class="lightbox-trigger"
+                                alt="Jewish Community of Antwerp"
+                                data-caption="Members of the Antwerp Jewish community in the Jewish quarter.">
+                            <div class="caption-text">Antwerp Jewish Community</div>
+                        </div>
                         <p>
                             Today, Antwerp remains one of the largest and most vibrant Jewish communities in Europe. The
                             city is home to the majority of Belgium’s Jewish population, with estimates generally
@@ -598,9 +614,12 @@
                         </p>
 
                         <p>
-                            Major communal bodies include <a href="#">Machsike Hadas</a>, which represents several Hasidic groups such
-                            as Belz, Satmar, Vizhnitz, and Ger, as well as <a href="#">Shomre Hadas</a>, which serves segments of the
-                            Modern Orthodox community. A <a href="#">Sephardic (Portuguese Rite) community</a> also maintains its own
+                            Major communal bodies include <a href="#">Machsike Hadas</a>, which represents several
+                            Hasidic groups such
+                            as Belz, Satmar, Vizhnitz, and Ger, as well as <a href="#">Shomre Hadas</a>, which serves
+                            segments of the
+                            Modern Orthodox community. A <a href="#">Sephardic (Portuguese Rite) community</a> also
+                            maintains its own
                             synagogue and institutions.
                         </p>
 
@@ -615,12 +634,19 @@
                         <p>
                             Key educational institutions include <strong>Jesode Hatorah–Beth Jacob</strong>, serving the
                             Orthodox community; <strong>Tachkemoni</strong>, founded in 1920 and affiliated with
-                            Religious Zionist traditions; and <strong><a href="#">Yavne</a></strong>, among others. Numerous yeshivot
+                            Religious Zionist traditions; and <strong><a href="#">Yavne</a></strong>, among others.
+                            Numerous yeshivot
                             and girls’ seminaries provide advanced religious study within the Haredi sector.
                         </p>
 
                         <h3>Economic Life and the Diamond Industry</h3>
 
+                        <div class="wiki-image-container image-float-left">
+                            <img src="images/modern-day-street.jpg" class="lightbox-trigger"
+                                alt="Diamond District Street Scene"
+                                data-caption="Everyday life in the Antwerp diamond district.">
+                            <div class="caption-text">Diamond District</div>
+                        </div>
                         <p>
                             Antwerp has long been a global center of the diamond trade, and the Jewish community
                             historically played a central role in its development. Although the diamond industry has
