--- a/rabbis/rabbi-chaim-kreiswirth.html
+++ b/rabbis/rabbi-chaim-kreiswirth.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Name - Jewish Antwerp Historical Archive</title>
+    <title>Rabbi Chaim Kreiswirth - Jewish Antwerp Historical Archive</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/accordion.css">
-    <script src="js/nav.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/accordion.css">
+    <script src="../js/nav.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="logo">
-                    <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
+                    <a href="../index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
                 </div>
                 <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="bar"></span>
@@ -28,12 +28,12 @@
                 </button>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="history.html">History</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../history.html">History</a></li>
 
-                        <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html">Synagogues</a></li>
-                        <li><a href="contribute.html">Contribute</a></li>
+                        <li><a href="../rabbis.html">Rabbis</a></li>
+                        <li><a href="../synagogues.html">Synagogues</a></li>
+                        <li><a href="../contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,22 +42,32 @@
         <main id="main-content">
             <!-- Breadcrumb / Header Area -->
             <div class="container" style="padding-top: var(--spacing-md); padding-bottom: var(--spacing-sm);">
-                <h1 style="font-size: 3rem; color: var(--color-gold); margin-bottom: 0.5rem;">Profile Name</h1>
-                <p class="hebrew-text" style="font-size: 1.5rem; color: var(--color-text-muted);">שם בעברית</p>
+                <h1 style="font-size: 3rem; color: var(--color-gold); margin-bottom: 0.5rem;">Rabbi Chaim Kreiswirth
+                </h1>
+                <p class="hebrew-text" style="font-size: 1.5rem; color: var(--color-text-muted);">הרב חיים קרייזווירט
+                </p>
             </div>
 
             <div class="container wiki-container" style="margin-top: 0;">
                 <!-- Main Content -->
                 <article class="wiki-main">
                     <section class="wiki-content">
-                        <p><strong>Introduction:</strong> Brief overview of the person's life and significance to the
-                            Antwerp Jewish community.</p>
+                        <p><strong>Introduction:</strong> Rabbi Chaim Kreiswirth (1918–2001) was a renowned Talmudic
+                            scholar and the long-serving Chief Rabbi of the <a href="../synagogues.html"
+                                class="wiki-link">Machsike Hadass</a> community in Antwerp. Known
+                            for his phenomenal memory and deep compassion, he rebuilt the community after the war.</p>
 
                         <h2>Life & Career</h2>
-                        <p>Detailed biography goes here...</p>
+                        <p>Born in Wojnicz, Galicia, he was known as the "Cracower Illui" (Prodigy of Cracow). He
+                            studied in Polish yeshivas before fleeing to Lithuania and then to Israel via Japan and
+                            Shanghai during WWII. He later moved to the United States before accepting the position of
+                            Chief Rabbi of Antwerp in 1953, a position he held for nearly 50 years.</p>
 
                         <h2>Legacy</h2>
-                        <p>Impact and lasting contributions...</p>
+                        <p>Rabbi Kreiswirth was instrumental in re-establishing Jewish life in Antwerp. He founded
+                            Talmud Torahs, Yeshivas, and was deeply involved in charitable works suitable for the
+                            "Father of Orphans." His mastery of the entire Talmud was legendary, often tested publicly.
+                        </p>
                     </section>
 
                     <!-- Gallery Section -->
@@ -68,7 +78,7 @@
                             <!-- Gallery Item 1 -->
                             <div class="card">
                                 <div class="card-image" style="height: 200px;">
-                                    <img src="https://placehold.co/400x400/333/c5a059?text=Photo+1" alt="Gallery Photo">
+                                    <img src="../images/rabbi-chaim-kreiswirth.jpg" alt="Rabbi Chaim Kreiswirth Portrait">
                                 </div>
                             </div>
                         </div>
@@ -80,7 +90,7 @@
                     <!-- Profile Image in Sidebar -->
                     <div class="profile-image-container"
                         style="margin-bottom: var(--spacing-md); border-bottom: 1px solid var(--color-slate); padding-bottom: var(--spacing-md);">
-                        <img src="https://placehold.co/600x800/1a1a1a/c5a059?text=Profile+Image" alt="Profile Name"
+                        <img src="../images/rabbi-chaim-kreiswirth.jpg" alt="Rabbi Chaim Kreiswirth"
                             style="width: 100%; height: auto; border-radius: 4px; border: 1px solid var(--color-slate); box-shadow: 0 4px 6px rgba(0,0,0,0.3);">
                     </div>
 
@@ -88,22 +98,22 @@
 
                     <div class="data-point">
                         <span class="data-label">Born</span>
-                        <span class="data-value">Year, City</span>
+                        <span class="data-value">1918, Wojnicz</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Died</span>
-                        <span class="data-value">Year, City</span>
+                        <span class="data-value">2001, Antwerp</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Tenure</span>
-                        <span class="data-value">Years Active</span>
+                        <span class="data-value">1953–2001</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Role</span>
-                        <span class="data-value">Title / Position</span>
+                        <span class="data-value">Chief Rabbi, Machsike Hadass</span>
                     </div>
 
                 </aside>
@@ -116,9 +126,9 @@
             </div>
         </footer>
     </div>
-    <script src="js/lightbox.js"></script>
-    <script src="js/scroll-top.js"></script>
-    <script src="js/accordion.js"></script>
+    <script src="../js/lightbox.js"></script>
+    <script src="../js/scroll-top.js"></script>
+    <script src="../js/accordion.js"></script>
 </body>
 
 </html>
