--- a/rabbis/rav-moshe-avigdor-amiel.html
+++ b/rabbis/rav-moshe-avigdor-amiel.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Name - Jewish Antwerp Historical Archive</title>
+    <title>Rav Moshe Avigdor Amiel - Jewish Antwerp Historical Archive</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/accordion.css">
-    <script src="js/nav.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/accordion.css">
+    <script src="../js/nav.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="logo">
-                    <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
+                    <a href="../index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
                 </div>
                 <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                     <span class="bar"></span>
@@ -28,12 +28,11 @@
                 </button>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="history.html">History</a></li>
-
-                        <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html">Synagogues</a></li>
-                        <li><a href="contribute.html">Contribute</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../history.html">History</a></li>
+                        <li><a href="../rabbis.html">Rabbis</a></li>
+                        <li><a href="../synagogues.html">Synagogues</a></li>
+                        <li><a href="../contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,22 +41,34 @@
         <main id="main-content">
             <!-- Breadcrumb / Header Area -->
             <div class="container" style="padding-top: var(--spacing-md); padding-bottom: var(--spacing-sm);">
-                <h1 style="font-size: 3rem; color: var(--color-gold); margin-bottom: 0.5rem;">Profile Name</h1>
-                <p class="hebrew-text" style="font-size: 1.5rem; color: var(--color-text-muted);">שם בעברית</p>
+                <h1 style="font-size: 3rem; color: var(--color-gold); margin-bottom: 0.5rem;">Rav Moshe Avigdor Amiel
+                </h1>
+                <p class="hebrew-text" style="font-size: 1.5rem; color: var(--color-text-muted);">הרב משה אביגדור עמיאל
+                </p>
             </div>
 
             <div class="container wiki-container" style="margin-top: 0;">
                 <!-- Main Content -->
                 <article class="wiki-main">
                     <section class="wiki-content">
-                        <p><strong>Introduction:</strong> Brief overview of the person's life and significance to the
-                            Antwerp Jewish community.</p>
+                        <p><strong>Introduction:</strong> Rav Moshe Avigdor Amiel (1882–1945) was a renowned rabbi,
+                            scholar, and communal leader who served as the Chief Rabbi of Antwerp before moving to Tel
+                            Aviv. He was a brilliant orator and a prolific author, known for his unique approach to
+                            Jewish thought and Halacha.</p>
 
                         <h2>Life & Career</h2>
-                        <p>Detailed biography goes here...</p>
+                        <p>Born in Porozow, Russia, Rav Amiel studied in the great yeshivot of Telz and Brisk. In 1920,
+                            he was appointed as the Chief Rabbi of Antwerp, a position he held for 16 years. During his
+                            tenure, he strengthened the religious institutions of the city and was beloved by the
+                            community for his inspiring sermons and leadership.</p>
+
+                        <p>In 1936, he immigrated to Eretz Israel to serve as the Chief Rabbi of Tel Aviv, a position he
+                            held until his passing.</p>
 
                         <h2>Legacy</h2>
-                        <p>Impact and lasting contributions...</p>
+                        <p>Rav Amiel left behind a rich legacy of written works, including "Derashot El Ami" (Sermons to
+                            My People) and "HaMiddot LeCheker HaHalachah" (Methodology for Halachic Research). His
+                            educational philosophy and Zionist ideals had a lasting impact on the Jewish world.</p>
                     </section>
 
                     <!-- Gallery Section -->
@@ -68,7 +79,7 @@
                             <!-- Gallery Item 1 -->
                             <div class="card">
                                 <div class="card-image" style="height: 200px;">
-                                    <img src="https://placehold.co/400x400/333/c5a059?text=Photo+1" alt="Gallery Photo">
+                                    <img src="../images/rav-moshe-avigdor-amiel.jpg" alt="Rav Moshe Avigdor Amiel">
                                 </div>
                             </div>
                         </div>
@@ -80,7 +91,7 @@
                     <!-- Profile Image in Sidebar -->
                     <div class="profile-image-container"
                         style="margin-bottom: var(--spacing-md); border-bottom: 1px solid var(--color-slate); padding-bottom: var(--spacing-md);">
-                        <img src="https://placehold.co/600x800/1a1a1a/c5a059?text=Profile+Image" alt="Profile Name"
+                        <img src="../images/rav-moshe-avigdor-amiel.jpg" alt="Rav Moshe Avigdor Amiel"
                             style="width: 100%; height: auto; border-radius: 4px; border: 1px solid var(--color-slate); box-shadow: 0 4px 6px rgba(0,0,0,0.3);">
                     </div>
 
@@ -88,22 +99,17 @@
 
                     <div class="data-point">
                         <span class="data-label">Born</span>
-                        <span class="data-value">Year, City</span>
+                        <span class="data-value">1882, Porozow</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Died</span>
-                        <span class="data-value">Year, City</span>
-                    </div>
-
-                    <div class="data-point">
-                        <span class="data-label">Tenure</span>
-                        <span class="data-value">Years Active</span>
+                        <span class="data-value">1945, Tel Aviv</span>
                     </div>
 
                     <div class="data-point">
                         <span class="data-label">Role</span>
-                        <span class="data-value">Title / Position</span>
+                        <span class="data-value">Chief Rabbi of Antwerp (1920-1936)</span>
                     </div>
 
                 </aside>
@@ -116,9 +122,9 @@
             </div>
         </footer>
     </div>
-    <script src="js/lightbox.js"></script>
-    <script src="js/scroll-top.js"></script>
-    <script src="js/accordion.js"></script>
+    <script src="../js/lightbox.js"></script>
+    <script src="../js/scroll-top.js"></script>
+    <script src="../js/accordion.js"></script>
 </body>
 
 </html>
